--- a/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientConnectedEventArgs.cs" />
     <Compile Include="PassiveCheckServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
