Prepare for active protocol implementation
 - Create an empty class for the active protocol
 - Move low level protocol methods & constants to an utility class

--- a/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -38,9 +38,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActiveCheckClient.cs" />
     <Compile Include="ClientConnectedEventArgs.cs" />
     <Compile Include="PassiveCheckServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ZabbixProtocol.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
