Use the correct log overload to include exceptions

--- a/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActiveCheckClient.cs" />
+    <Compile Include="ActiveCheckInfo.cs" />
     <Compile Include="ClientConnectedEventArgs.cs" />
     <Compile Include="PassiveCheckServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
