--- a/SampleAgent/SampleAgent.csproj
+++ b/SampleAgent/SampleAgent.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="2.0.1.2" />
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Mono.Options" Version="5.3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ZabbixAgentLib\ZabbixAgentLib.csproj" />
