--- a/SampleAgent/SampleAgent.csproj
+++ b/SampleAgent/SampleAgent.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
+    <AssemblyName>Itg.ZabbixAgentLib.SampleAgent</AssemblyName>
+    <RootNamespace>Itg.ZabbixAgentLib.SampleAgent</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="2.0.1.2" />
