--- a/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net40</TargetFrameworks>
     <PackageId>Itg.ZabbixAgentLib</PackageId>
+    <RootNamespace>Itg.ZabbixAgentLib</RootNamespace>
+    <AssemblyName>Itg.ZabbixAgentLib</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="2.0.1.2" />
