--- a/SampleAgent/SampleAgent.csproj
+++ b/SampleAgent/SampleAgent.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net462</TargetFramework>
     <AssemblyName>Itg.ZabbixAgentLib.SampleAgent</AssemblyName>
     <RootNamespace>Itg.ZabbixAgentLib.SampleAgent</RootNamespace>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="NLog" Version="2.0.1.2" />
