--- a/SampleAgent/SampleAgent.csproj
+++ b/SampleAgent/SampleAgent.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
@@ -7,10 +8,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NLog" Version="2.0.1.2" />
-    <PackageReference Include="Mono.Options" Version="5.3.0.1" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\ZabbixAgentLib\ZabbixAgentLib.csproj" />
   </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
