--- a/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net40</TargetFrameworks>
     <PackageId>Itg.ZabbixAgentLib</PackageId>
     <RootNamespace>Itg.ZabbixAgentLib</RootNamespace>
     <AssemblyName>Itg.ZabbixAgentLib</AssemblyName>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="NLog" Version="2.0.1.2" />
-  </ItemGroup>
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
