--- a/src/SampleAgent/SampleAgent.csproj
+++ b/src/SampleAgent/SampleAgent.csproj
@@ -10,5 +10,5 @@
   <ItemGroup>
     <ProjectReference Include="..\ZabbixAgentLib\ZabbixAgentLib.csproj" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
