--- a/src/ZabbixAgentLib/ZabbixAgentLib.csproj
+++ b/src/ZabbixAgentLib/ZabbixAgentLib.csproj
@@ -6,5 +6,5 @@
     <RootNamespace>Itg.ZabbixAgentLib</RootNamespace>
     <AssemblyName>Itg.ZabbixAgentLib</AssemblyName>
   </PropertyGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
