--- a/src/SampleAgent/SampleAgent.csproj
+++ b/src/SampleAgent/SampleAgent.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
-    <AssemblyName>Itg.ZabbixAgentLib.SampleAgent</AssemblyName>
-    <RootNamespace>Itg.ZabbixAgentLib.SampleAgent</RootNamespace>
+    <AssemblyName>Itg.ZabbixAgent.SampleAgent</AssemblyName>
+    <RootNamespace>Itg.ZabbixAgent.SampleAgent</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ZabbixAgentLib\ZabbixAgentLib.csproj" />
+    <ProjectReference Include="..\ZabbixAgent\ZabbixAgent.csproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
