--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,5 +8,6 @@ cache:
   - "%LocalAppData%\\NuGet\\Cache -> paket.lock"
   - "paket-files -> paket.lock"
 build_script:
-  - ps: .\build.cmd CI
+  - dir
+  - .\build.cmd CI
 test: off
