--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -15,6 +15,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <LangVersion>7.1</LangVersion>
-    <NoWarn>NU1701</NoWarn>
+    <NoWarn>$(NoWarn);NU1701</NoWarn>
   </PropertyGroup>
 </Project>
